cus dash gap fixed

--- a/src/main/webapp/css/cusDash.css
+++ b/src/main/webapp/css/cusDash.css
@@ -1,7 +1,7 @@
 @charset "ISO-8859-1";
 .container{
 	width:100%;
-	height:1000px;
+	height:550px;
 }
 
 td,tr,th{
